@@ -423,11 +423,11 @@ void sj_extractor_extract_track (SjExtractor *extractor, const TrackDetails *tra
   tracknumber = g_strdup_printf("%d", track->number);
   caps = GST_CAPS_NEW ("soundjuicer_metadata", 
                        "application/x-gst-metadata",
-                       "title", GST_PROPS_STRING (track->title),
-                       "artist", GST_PROPS_STRING (track->artist),
-                       "tracknumber", GST_PROPS_STRING (tracknumber),
-                       "album", GST_PROPS_STRING (track->album->title),
-                       "comment", GST_PROPS_STRING(_("Ripped with Sound Juicer"))
+                       "TITLE", GST_PROPS_STRING (track->title),
+                       "ARTIST", GST_PROPS_STRING (track->artist),
+                       "TRACKNUMBER", GST_PROPS_STRING (tracknumber),
+                       "ALBUM", GST_PROPS_STRING (track->album->title),
+                       "COMMENT", GST_PROPS_STRING(_("Ripped with Sound Juicer"))
                        );
   g_object_set (G_OBJECT (priv->encoder), "metadata", caps, NULL);
   g_free (tracknumber);
