@@ -1,3 +1,8 @@
+2003-06-03  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
+	Uppercase the metadata keywords.
+
 2003-06-02  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
